@@ -1,0 +1,13 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         bignum
+version:      0.15
+version_from: lib/bignum.pm
+installdirs:  perl
+requires:
+    Math::BigFloat:                1.44
+    Math::BigInt:                  1.7
+    Math::BigRat:                  0.12
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.21
