@@ -1,7 +1,7 @@
 package bigint;
 require 5.005;
 
-$VERSION = '0.04';
+$VERSION = '0.05';
 use Exporter;
 @ISA		= qw( Exporter );
 @EXPORT_OK	= qw( ); 
@@ -73,7 +73,7 @@ sub _constant
     $float =~ s/\..*//;
     return $float;
     }
-  my ($mis,$miv,$mfv,$es,$ev) = Math::BigInt::_split(\$float);
+  my ($mis,$miv,$mfv,$es,$ev) = Math::BigInt::_split($float);
   return $float if !defined $mis; 	# doesn't look like a number to me
   my $ec = int($$ev);
   my $sign = $$mis; $sign = '' if $sign eq '+';
